--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -46,7 +46,7 @@
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <PlatformToolset>v140_xp</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
-    <UseOfMfc>Dynamic</UseOfMfc>
+    <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
@@ -342,7 +342,6 @@
     <ClCompile Include="Wave\OnlineMicophone.cpp" />
     <ClCompile Include="Wave\wave.cpp" />
     <ClCompile Include="Web\FileSync.cpp" />
-    <ClCompile Include="Web\SoundBroadcaster.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\plugin_definitions.h" />
@@ -369,7 +368,6 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="TcpAudioStreamer.h" />
     <ClInclude Include="Util\Log.h" />
     <ClInclude Include="Util\NetUtil.h" />
     <ClInclude Include="Util\RingBuffer.h" />
@@ -388,7 +386,6 @@
     <ClInclude Include="Wave\Steganography.h" />
     <ClInclude Include="Wave\wave.h" />
     <ClInclude Include="Web\FileSync.h" />
-    <ClInclude Include="Web\SoundBroadcaster.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="test_plugin.rc" />
