--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -38,7 +38,7 @@
     <ProjectGuid>{192D646D-748B-450B-AF3D-BF8EDD5FC897}</ProjectGuid>
     <RootNamespace>test_plugin</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
     <ProjectName>SoundplayerPlugin</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -50,7 +50,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
@@ -74,20 +74,20 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Managed Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Static</UseOfMfc>
     <CLRSupport>false</CLRSupport>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='TestExecutable|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
@@ -192,7 +192,15 @@
       <SubSystem>Windows</SubSystem>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
+      <UACExecutionLevel>AsInvoker</UACExecutionLevel>
+      <UACUIAccess>false</UACUIAccess>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(OutputPath)$(TargetFileName) "c:\Users\Battlechicken\AppData\Roaming\TS3Client\plugins\"</Command>
+    </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>taskkill /IM ts3client_win64.exe /F /T 2&gt;nul &amp;set errorlevel=0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Managed Debug|Win32'">
     <ClCompile>
@@ -210,7 +218,15 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
+      <UACExecutionLevel>AsInvoker</UACExecutionLevel>
+      <UACUIAccess>false</UACUIAccess>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(OutputPath)$(TargetFileName) "c:\Users\Battlechicken\AppData\Roaming\TS3Client\plugins\"</Command>
+    </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>taskkill /IM ts3client_win64.exe /F /T 2&gt;nul &amp;set errorlevel=0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='TestExecutable|Win32'">
     <ClCompile>
@@ -230,7 +246,15 @@
       <TargetMachine>MachineX86</TargetMachine>
       <EntryPointSymbol>
       </EntryPointSymbol>
+      <UACExecutionLevel>AsInvoker</UACExecutionLevel>
+      <UACUIAccess>false</UACUIAccess>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(OutputPath)$(TargetFileName) "c:\Users\Battlechicken\AppData\Roaming\TS3Client\plugins\"</Command>
+    </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>taskkill /IM ts3client_win64.exe /F /T 2&gt;nul &amp;set errorlevel=0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -247,7 +271,15 @@
       <SubSystem>Windows</SubSystem>
       <DataExecutionPrevention>
       </DataExecutionPrevention>
+      <UACExecutionLevel>AsInvoker</UACExecutionLevel>
+      <UACUIAccess>false</UACUIAccess>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(OutputPath)$(TargetFileName) "c:\Users\Battlechicken\AppData\Roaming\TS3Client\plugins\"</Command>
+    </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>taskkill /IM ts3client_win64.exe /F /T 2&gt;nul &amp;set errorlevel=0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Managed Debug|x64'">
     <ClCompile>
@@ -264,7 +296,15 @@
       <SubSystem>Windows</SubSystem>
       <DataExecutionPrevention>
       </DataExecutionPrevention>
+      <UACExecutionLevel>AsInvoker</UACExecutionLevel>
+      <UACUIAccess>false</UACUIAccess>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(OutputPath)$(TargetFileName) "c:\Users\Battlechicken\AppData\Roaming\TS3Client\plugins\"</Command>
+    </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>taskkill /IM ts3client_win64.exe /F /T 2&gt;nul &amp;set errorlevel=0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='TestExecutable|x64'">
     <ClCompile>
@@ -283,7 +323,15 @@
       </DataExecutionPrevention>
       <EntryPointSymbol>
       </EntryPointSymbol>
+      <UACExecutionLevel>AsInvoker</UACExecutionLevel>
+      <UACUIAccess>false</UACUIAccess>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(OutputPath)$(TargetFileName) "c:\Users\Battlechicken\AppData\Roaming\TS3Client\plugins\"</Command>
+    </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>taskkill /IM ts3client_win64.exe /F /T 2&gt;nul &amp;set errorlevel=0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -298,7 +346,15 @@
       <SubSystem>Windows</SubSystem>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
+      <UACExecutionLevel>AsInvoker</UACExecutionLevel>
+      <UACUIAccess>false</UACUIAccess>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(OutputPath)$(TargetFileName) "c:\Users\Battlechicken\AppData\Roaming\TS3Client\plugins\"</Command>
+    </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>taskkill /IM ts3client_win64.exe /F /T 2&gt;nul &amp;set errorlevel=0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -314,7 +370,15 @@
       <SubSystem>Windows</SubSystem>
       <DataExecutionPrevention>
       </DataExecutionPrevention>
+      <UACExecutionLevel>AsInvoker</UACExecutionLevel>
+      <UACUIAccess>false</UACUIAccess>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(OutputPath)$(TargetFileName) "c:\Users\Battlechicken\AppData\Roaming\TS3Client\plugins\"</Command>
+    </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>taskkill /IM ts3client_win64.exe /F /T 2&gt;nul &amp;set errorlevel=0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App\SoundplayerApp.cpp" />
