--- a/Plugin/test_plugin.vcxproj.filters
+++ b/Plugin/test_plugin.vcxproj.filters
@@ -238,9 +238,6 @@
     <ClCompile Include="Util\Config.cpp">
       <Filter>Util</Filter>
     </ClCompile>
-    <ClCompile Include="App\main.cpp">
-      <Filter>Exe</Filter>
-    </ClCompile>
     <ClCompile Include="App\plugin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -249,6 +246,9 @@
     </ClCompile>
     <ClCompile Include="Util\InputHandler.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="exe\main.cpp">
+      <Filter>Exe</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
