--- a/Plugin/test_plugin.vcxproj.filters
+++ b/Plugin/test_plugin.vcxproj.filters
@@ -161,6 +161,9 @@
     <ClInclude Include="Util\InputHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Wave\AudioProcessing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
