--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -397,8 +397,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App\SoundplayerApp.cpp" />
-    <ClCompile Include="Util\InputHandler.cpp" />
-    <ClCompile Include="Util\QuickSoundHandler.cpp" />
+    <ClCompile Include="App\InputHandler.cpp" />
+    <ClCompile Include="App\QuickSoundHandler.cpp" />
     <ClCompile Include="Util\Config.cpp" />
     <ClCompile Include="exe\main.cpp" />
     <ClCompile Include="Gui\AudioProcessorDialog.cpp" />
@@ -410,10 +410,10 @@
     <ClCompile Include="Gui\InputObserverDialog.cpp" />
     <ClCompile Include="KeyboardHook\LocalKeyboardHookInstaller.cpp" />
     <ClCompile Include="KeyboardHook\PipeHandler.cpp" />
-    <ClCompile Include="Util\MenuHandler.cpp" />
+    <ClCompile Include="App\MenuHandler.cpp" />
     <ClCompile Include="App\plugin.cpp" />
     <ClCompile Include="stdafx.cpp" />
-    <ClCompile Include="Util\HotkeyHandler.cpp" />
+    <ClCompile Include="App\HotkeyHandler.cpp" />
     <ClCompile Include="Util\Log.cpp" />
     <ClCompile Include="Util\Util.cpp" />
     <ClCompile Include="Wave\AudioBuffer.cpp" />
@@ -429,8 +429,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App\SoundplayerApp.h" />
-    <ClInclude Include="Util\InputHandler.h" />
-    <ClInclude Include="Util\QuickSoundHandler.h" />
+    <ClInclude Include="App\InputHandler.h" />
+    <ClInclude Include="App\QuickSoundHandler.h" />
     <ClInclude Include="Util\Config.h" />
     <ClInclude Include="Gui\AudioProcessorDialog.h" />
     <ClInclude Include="Gui\DlgScrollable.h" />
@@ -448,7 +448,7 @@
     <ClInclude Include="KeyboardHook\LocalKeyboardHookInstaller.h" />
     <ClInclude Include="KeyboardHook\PipeHandler.h" />
     <ClInclude Include="Util\Maybe.h" />
-    <ClInclude Include="Util\MenuHandler.h" />
+    <ClInclude Include="App\MenuHandler.h" />
     <ClInclude Include="App\plugin.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -456,7 +456,7 @@
     <ClInclude Include="Util\Log.h" />
     <ClInclude Include="Util\NetUtil.h" />
     <ClInclude Include="Util\RingBuffer.h" />
-    <ClInclude Include="Util\HotkeyHandler.h" />
+    <ClInclude Include="App\HotkeyHandler.h" />
     <ClInclude Include="Util\TSSoundPlayer.h" />
     <ClInclude Include="Util\Util.h" />
     <ClInclude Include="Wave\AudioBuffer.h" />
