--- a/Plugin/test_plugin.vcxproj.filters
+++ b/Plugin/test_plugin.vcxproj.filters
@@ -173,6 +173,9 @@
     <ClInclude Include="Util\RunLoop.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Util\InputStream.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
