--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -399,6 +399,7 @@
     <ClCompile Include="App\SoundplayerApp.cpp" />
     <ClCompile Include="App\InputHandler.cpp" />
     <ClCompile Include="App\QuickSoundHandler.cpp" />
+    <ClCompile Include="App\NetworkAudioHandler.cpp" />
     <ClCompile Include="Util\Config.cpp" />
     <ClCompile Include="exe\main.cpp" />
     <ClCompile Include="Gui\AudioProcessorDialog.cpp" />
@@ -431,6 +432,7 @@
     <ClInclude Include="App\SoundplayerApp.h" />
     <ClInclude Include="App\InputHandler.h" />
     <ClInclude Include="App\QuickSoundHandler.h" />
+    <ClInclude Include="App\NetworkAudioHandler.h" />
     <ClInclude Include="Util\Config.h" />
     <ClInclude Include="Gui\AudioProcessorDialog.h" />
     <ClInclude Include="Gui\DlgScrollable.h" />
